# simple_web_ser

./: .gitignore  CMakeLists.txt  README.md  client_main.cpp  client_win_main.cpp  multi_server.cpp  server_main.cpp
doc/: data.txt
include/: Client.h  Client_Win.h  Server.h
src/: Client.cc  Client_Win.cpp  Server.cpp
